--- a/css/styles.css
+++ b/css/styles.css
@@ -396,12 +396,37 @@ ul{
 .project-link:focus{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+.project-link:hover .projects-top-text{
+    transform: translateY(0);
+}
 .project-picture{
     display: block;
     max-width: 100%;
     height: auto;
 }
-
+.projects-top-text{
+    position: absolute;
+    top: 0;
+    background-color: rgba(33, 150, 243, 0.9);
+    color: #FFFFFF;
+    font-style: normal;
+    font-weight: 400; 
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    padding: 63px 24px;
+    height: 100%;
+    transform: translateY(100%);
+    transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+.projects-top-wrap{
+    position: relative;
+    overflow: hidden;
+}
+.projects-list{
+    flex-basis: calc((100% - 60px) / 3);
+    
+}
 .current{
     color: #2196F3;
 }
@@ -468,9 +493,6 @@ ul{
     padding-right: 24px;
     padding-top: 20px;
     padding-bottom: 20px;
-}
-.projects-list{
-    flex-basis: calc((100% - 60px) / 3);
 }
 .container-projects{
     display: flex;
