--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ ul{
     margin-right: auto;
 }
 .link-nav{
+    position: relative;
     color: #212121;
     text-decoration: none;
     font-weight: 500;
@@ -74,7 +75,7 @@ ul{
     line-height: 1.1428;
     letter-spacing: 0.02em;
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 36px;
     transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 .link-nav:hover, 
@@ -619,3 +620,16 @@ ul{
   .address a{
     transition: cubic-bezier(0.4, 0, 0.2, 1) 250ms;
   }
+  .underline::after{
+    position: absolute;
+    content: '';
+    bottom: 0;
+    left: 0;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+    background: #2196f3;
+    border-radius: 2px;
+}
+  
