--- a/css/styles.css
+++ b/css/styles.css
@@ -587,11 +587,30 @@ ul{
     width: 528px;
     height: 581px;
     background-color: #FFFFFF;
-
+    padding: 40px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border-radius: 4px;
+  }
+  .modal-title{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 12px;
+  }
+  .modal-form{
+
+  }
+  .modal-input{
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
   }
   .button-close-icon{
